Adding more write up

--- a/BayesBootstrapMLE1.ipynb
+++ b/BayesBootstrapMLE1.ipynb
@@ -6,30 +6,37 @@
    "source": [
     "# Bayes, Bootstrap, MLE & All That\n",
     "-----\n",
-    "\n",
-    "In this post I want to go back to the basics of statistics, but from an advanced point of view both from a theoretical point of view and technical point of view. The point is go back to the basics of estimating a single parameter value and then quantifying the uncertantity in the estimate using variou methods. In general I will take three approaches to this two of which are [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and one that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics). I admit, Im not as familar with Bayesian methods and therefore sticking to a simple example of estimating a single parameter. I don't believe one approach to statistics is inherently better than the other, but have found so-called frequentist for me to be easier to understand, easier to implement and additionally found Fisherian approaches satisfying from a theoretical point of view.\n",
-    "\n",
     "The title for this post is inspired by [Div, Grad, Curl & All That](https://www.google.com/books/edition/_/sembQgAACAAJ?hl=en) which I used as a undergraduate to help learn vector calculus.\n",
     "\n",
+    "## Introduction\n",
+    "-------------\n",
     "\n",
-    "## 1. Using A Poisson Distribution Written In Scala with Py4J\n",
+    "In this post I want to go back to the basics of statistics, but from an advanced view point. By \"advanced view point\" I mean, both from a mathematical and technical point of view. My object is to go back to the basics of \n",
+    "\n",
+    "    Estimating a single parameter value from a distribution and then quantifying the uncertantity in the estimate using a few methods.\n",
+    "    \n",
+    "In general I will take three approaches to this two of which are [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and one that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics).  I'll admit now, I am not as familar with Bayesian methods and that's why I'll be sticking to a simple example of estimating the mean rate or $\\lambda$ in a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution#) from sampled data. I don't believe one approach to statistics is inherently better than the other, but have found so-called frequentist for me to be easier to understand, easier to implement and additionally I found Fisherian approaches satisfying from a mathematical point of view.\n",
+    "\n",
+    "From the technical side, I wanted to do something different decided to write the distribution for generating data in [Scala](https://www.scala-lang.org/) and use that distribution from Python. But why did I write my distribution in Scala? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the [JVM](https://en.wikipedia.org/wiki/Java_virtual_machine) from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for Scala code. I've used both PySpark and Spark in Scala and this gave me an opportunity to understand how PySpark works better.\n",
+    "\n",
+    "Let's get into how I wrote the Poisson distribution in Scala and used it to sample data from in Python.\n",
+    "\n",
+    "## 1. Sampling A Poisson Distribution Written In Scala with Py4J\n",
     "---------------\n",
     "\n",
-    "The first thing we need is data and for that purposes I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala). The Poisson distribution is a probability distribution for a random variable $y$ that represents some count phenomena, i.e. a number of non-zero integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour are governed by Poisson distribution. The disibution is,\n",
+    "The first thing I need is data from a Poisson distribution to estimate the mean rate $\\lambda$ and for that purpose I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala). The Poisson distribution is a probability distribution for a random variable $y$ that represents some count phenomena, i.e. a number of non-zero integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour are governed by Poisson distribution. The disibution is,\n",
     "\n",
     "$$ p(y \\, = \\, k)  \\; = \\; \\frac{\\lambda^{k} e^{-\\lambda} }{k!} $$\n",
     "\n",
-    "The parameter $\\lambda$ is the rate variable, i.e. the true number of customers \n",
+    "The parameter $\\lambda$ is the rate variable, i.e. the true number of customers that visit the website per hour.\n",
     "\n",
-    "But why did I write my distribution in Scala? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the JVM from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for Scala code. I've used both PySpark and Spark in Scala and this gave me an opportunity to understand how PySpark works better.\n",
-    "\n",
-    "The first was to create the Poisson class as I did this [project](https://github.com/mdh266/PoissonDistributionInScala), however, one key difference is the return value of any public value needs to be Java object. Specifically the [sample](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Poisson.scala) method needs to return a Java List ([java.util.List[Int]](https://www.javatpoint.com/java-list)) of integers. I originally tried returning a [Scala List](https://www.scala-lang.org/api/current/scala/collection/immutable/List.html) which worked fine in pure Scala, but when Py4J was not able to serialize this object so well and Python type of returned list was \"Java Object\".\n",
+    "The first step was to create the Poisson class. I did this in a previous [project](https://github.com/mdh266/PoissonDistributionInScala), however, one key difference is the return value of any public value needs to be Java object. Specifically the [sample](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Poisson.scala) method needs to return a Java List ([java.util.List[Int]](https://www.javatpoint.com/java-list)) of integers. I originally tried returning a [Scala List](https://www.scala-lang.org/api/current/scala/collection/immutable/List.html) which worked fine in pure Scala, but when Py4J was not able to serialize this object so well and Python type of returned list was \"Java Object\".\n",
     "\n",
     "In order to use this class from Python we need to do three things from the Scala point of view:\n",
     "\n",
     "1. Create a [Gateway Server](https://www.py4j.org/_static/javadoc/index.html?py4j/GatewayServer.html)\n",
     "2. Create a class entrypoint to allow for setting object attributes outside of the constructor\n",
-    "3. Package the code as a jar using a build tool such as [Maven](https://maven.apache.org/) or [SBT](https://www.scala-sbt.org/).\n",
+    "3. Package the code as a jar using a build tool such as [Maven](https://maven.apache.org/) or [SBT](https://www.scala-sbt.org/)\n",
     "\n",
     "\n",
     "The first step is pretty straight forward to from the [Py4J Documentation](https://www.py4j.org/getting_started.html) and is in the [Main.Scala](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Main.scala) object:\n",
@@ -44,20 +51,16 @@
     "        }\n",
     "    }\n",
     "    \n",
-    "The GatewayServer in the author's own words *it allows Python programs to communicate with the JVM through a local network socket.*  The GatewayServer takes an *entrypoint* as a parameter which can be any object, see [here](https://www.py4j.org/getting_started.html#writing-the-python-program).  However, the entrypoint doesn't really offer a way for us to pass the $\\lambda$ value from [Python](https://www.py4j.org/getting_started.html#writing-the-python-program) to the Poisson constructor. To get around this I create a [PoissonEntryPoint](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/PoissonEntryPoint.scala) case class:\n",
+    "The GatewayServer in the author's own words *it allows Python programs to communicate with the JVM through a local network socket.*  The GatewayServer takes an *entrypoint* as a parameter which can be any object, see [here](https://www.py4j.org/getting_started.html#writing-the-python-program).  However, the entrypoint doesn't really offer a way for us to pass the $\\lambda$ value from [Python](https://www.py4j.org/getting_started.html#writing-the-python-program) to the Poisson constructor in Scala. To get around this issue I created a [PoissonEntryPoint](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/PoissonEntryPoint.scala) case class:\n",
     "\n",
     "    case class PoissonEntryPoint() {\n",
     "\n",
     "        def Poisson(lambda : Double) : PoissonDistribution = {\n",
-    "            var p = new PoissonDistribution()\n",
-    "            p.setLambda(lambda)\n",
-    "            p\n",
+    "            new PoissonDistribution()\n",
     "        }\n",
-    "\n",
-    "\n",
     "    }\n",
     "\n",
-    "This case class really just acts a [Singleton](https://docs.scala-lang.org/tour/singleton-objects.html), but has a class instead of an object. The point of this class is simply to be able to create a Poisson class with a instance after starting GatewayServer.  \n",
+    "This case class really just acts a [Singleton](https://docs.scala-lang.org/tour/singleton-objects.html), but is a class instead of an object. The point of the `PoissonEntryPoint` class is simply to be able to create a Poisson class with a specific $\\lambda$ value after starting the GatewayServer.  \n",
     "\n",
     "Now let's talk about how the project structure and packaging it for use.  The project structure is:\n",
     "\n",
@@ -70,7 +73,7 @@
     "    pom.xml\n",
     "    \n",
     "\n",
-    "The [pom.xml](https://maven.apache.org/guides/introduction/introduction-to-the-pom.html#:~:text=Available%20Variables-,What%20is%20a%20POM%3F,default%20values%20for%20most%20projects.) file is the project object model and is a file which all contains all the instructions for [Maven](https://maven.apache.org/). I wont go into the details here, but I will say that Maven is a java tool to compile and package our code while SBT is the Scala equivalent. Since Scala is a [JVM language](https://en.wikipedia.org/wiki/List_of_JVM_languages) we can use either, however, I went with Maven since I'm more familiar with it and because examples with Py4J were much more easy to find.\n",
+    "The [pom.xml](https://maven.apache.org/guides/introduction/introduction-to-the-pom.html#:~:text=Available%20Variables-,What%20is%20a%20POM%3F,default%20values%20for%20most%20projects.) file is the project object model and is a file which all contains all the instructions for [Maven](https://maven.apache.org/). I won't go into the details here, but I will say that Maven is a java tool to compile and package our code while [SBT](https://www.scala-sbt.org/) is the Scala equivalent. Since Scala is a [JVM language](https://en.wikipedia.org/wiki/List_of_JVM_languages) we can use either, however, I went with Maven since I'm more familiar with it and because examples with Py4J were much more easy to find.\n",
     "\n",
     "We package our code into a [uber jar](https://stackoverflow.com/questions/11947037/what-is-an-uber-jar) with the command:\n",
     "\n",
@@ -263,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The really nice thing about Py4J is that you can treat objects in the JVM as if they are Python objects. For instance we can see the methods in the object:"
+    "The really nice thing about Py4J *is that you can treat objects in the JVM as if they are Python objects.* For instance we can see the methods in the object:"
    ]
   },
   {
@@ -376,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like Py4J returns a Python list while the [PoissonDistribution class](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/PoissonDistribution.scala)) returns   `java.util.List[Int]`.  Py4J can only serialize specific Java objects back to Python which is awesome!  This is also why I needed to convert to from a Scala `List[Int]` to a `ava.util.List[Int]`, without it the returned object would just be a genera `Java Object`.  \n",
+    "It looks like Py4J returns a Python list while the [PoissonDistribution class](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/PoissonDistribution.scala) returns a  `java.util.List[Int]`.  Py4J can only serialize specific Java objects back to Python which is awesome!  This is also why I needed to convert to from a Scala `List[Int]` to a `ava.util.List[Int]`, without it the returned object would just be a genera `Java Object`.  \n",
     "\n",
     "\n",
     "Now that we have our sample, let's get into the Maximum Likelyhood Estimator to estimate the $\\lambda$ for the distribution that generated our sample."
@@ -387,7 +390,68 @@
    "metadata": {},
    "source": [
     "## 2. The Maximum Likelyhood Estimator \n",
-    "----------"
+    "----------\n",
+    "\n",
+    "First what is the difference between a statistic and an estimator?  A statistic is any function of a sample.  An **estimator** is any function of a sample that is used to estimate a population parameter.  The **maximum likelyhood estimator** is the value of a population distribution $\\lambda$ that maximizes the probability of observing the sample.  \n",
+    "\n",
+    "\n",
+    "We can find the MLE from a random sample $x_1, x_2, \\, \\ldots \\,, x_{n}$ from $f(x_{i} \\vert \\, \\lambda)$ then the **likelyhood function** is defined as,\n",
+    "\n",
+    "$$ L(\\lambda  \\, \\vert x_1, \\, x_2, \\, \\ldots, \\, x_n)  \\; = \\; \\prod_{i=1}^{n}f(x_{i} \\, \\vert \\, \\lambda) $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Then we can find the MLE $\\widehat{\\lambda}$ such that, \n",
+    "\n",
+    "$$ \n",
+    "\\frac{\\partial L(\\lambda \\, \\vert x_1, x_2, \\ldots, x_n)}{\\partial \\lambda}  \\; = \\; 0 \n",
+    "$$\n",
+    "\n",
+    "I should remark that an estimator is a **random variable** as a [random variable](https://en.wikipedia.org/wiki/Random_variable) is any function of the sample space that is measurable and has values in the $\\mathbb{R}$.  The MLE has many important properties, the most important in my mind are some are,\n",
+    "\n",
+    "1. It is a consistent estimator.\n",
+    "2. It is invariant, if $\\widehat{\\lambda}$ is the MLE of $\\lambda$, then for any function $\\tau(\\lambda)$, the MLE of $\\tau(\\lambda)$ is $\\tau(\\widehat{\\lambda})$.\n",
+    "3. The MLE is an asymptotically normal estimator.  That is $\\widehat{\\lambda} \\; \\sim \\; N(\\lambda, \\, \\mathcal{I}^{-1})$. \n",
+    "\n",
+    "To explain the first property we, must note that as an estimator is a function of the sample space it is also a random variable.  Let $X_1, \\, \\ldots, \\, X_n$ be a sequence of random variables then $X_{i} \\; \\xrightarrow{\\mathcal{P}} \\; X$ if,\n",
+    "\n",
+    "$$\\forall \\epsilon > 0, \\; \\lim\\limits_{n \\rightarrow \\infty} P(\\vert X_i - X \\vert > \\epsilon ) \\; = \\; 0$$ \n",
+    "\n",
+    "then we say the random variable converges in probability. For an estimator this property of convergence is called **consistency**. Consistency is a necessary condition of any estimator in statistics and basically signifies that  estimator eventually settles down to constant or some probability distribution of values. \n",
+    "\n",
+    "The second property of the MLE allows us to transform our likelyhood function into one that is easier to calculat the MLE with, i.e. the log-likelyhood function. That is the MLE, $\\hat{\\lambda}$ will satisfy, \n",
+    "\n",
+    "$$ \\frac{\\partial \\log(L(\\lambda \\, \\vert x_1, \\, \\ldots, x_n ))}{\\partial \\lambda}  \\; = \\; 0 $$\n",
+    "\n",
+    "\n",
+    "The third property of asymptotic normality of the MLE is helpful in modeling, since your standardized residuals are normal. Hence the sum of squares of the residuals are $\\chi^2$ distributed.  This allows us to define confidence intervals around of estimates.\n",
+    "\n",
+    "\n",
+    "\n",
+    "For the Poisson distribution, the likelyhood function is \n",
+    "\n",
+    "$$\n",
+    "\\begin{align} L(\\lambda  \\, \\vert x_1, \\, x_2, \\, \\ldots, \\, x_n)  \n",
+    "\\; &= \\; \n",
+    "\\prod_{i=1}^{n} \\frac{e^{-\\lambda} \\, \\lambda^{x_i}} {x_i!} \\newline\n",
+    "&= \\; \n",
+    "e^{-n \\, \\lambda} \\lambda^{n \\, \\bar{x}_{n}}  \\frac{1} {\\prod_{i=1}^{n} x_i!}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "We take the log of both sides and then setting the derivative equal to zero we find\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "- n  \\,  + \\, \\frac{n \\, \\bar{x}_{n}}{\\widehat{\\lambda}} \\, = \\, 0\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Then solving for $\\widehat{\\lambda}}$ we find the MLE is,\n",
+    "\n",
+    "\n",
+    "$$ \\widehat{\\lambda} \\, = \\, \\bar{x}_{n} $$\n"
    ]
   },
   {
@@ -534,14 +598,6 @@
    "source": [
     "## 3. Confidence Intervals From The Fisher Information\n",
     "-------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. The Bootstrap\n",
-    "----------------"
    ]
   }
  ],
