--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bayesian Vs Frequentist Estimators \n",
+    "# Bayesian Vs. Frequentist Estimation With Py4J and PyMC3\n",
     "-----\n",
     "\n",
     "__[1. Introduction](#first-bullet)__\n",
     "\n",
-    "__[2. Sampling A Distribution Written In Scala Using Python With Py4J](#second-bullet)__\n",
+    "__[2. Sampling A Distribution Written In Scala Using Py4J](#second-bullet)__\n",
     "\n",
     "__[3. The Maximum Likelyhood Estimator](#third-bullet)__\n",
     "\n",
@@ -23,20 +23,20 @@
     "## Introduction <a class=\"anchor\" id=\"first-bullet\"></a>\n",
     "-------------\n",
     "\n",
-    "In this post I want to go back to the basics of statistics, but from an advanced view point. By \"advanced view point\" I mean, both from a mathematical and technical point of view. My object is to go back to the basics of \n",
+    "In this post I want to go back to the basics of statistics, but from an advanced view point. By \"advanced view point\" I mean, both from in terms of mathematics and computational techniques . My object is to go back to the basics of\n",
     "\n",
     "    Estimating a single parameter value from a distribution and then quantifying the uncertantity in the estimate using a few methods.\n",
     "    \n",
-    "In general I will take two approaches to this, one of which is [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and one that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics).  I'll admit now, I am not as familar with Bayesian methods and that's why I'll be sticking to a simple example of estimating the mean rate or $\\lambda$ in a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution#) from sampled data. I don't believe one approach to statistics is inherently better than the other, but have found so-called frequentist for me to be easier to understand, easier to implement and additionally I found Fisherian approaches satisfying from a mathematical point of view.\n",
+    "In general I will take two approaches, the first of which is [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and second that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics).  I'll admit, I am not as familar with Bayesian methods and that's why I'll be sticking to a simple example of estimating the mean rate or $\\lambda$ in a [Poisson distribution](https://en.wikipedia.org/wiki/Poisson_distribution#) from sampled data. I don't believe either approach to statistics is inherently better than the other, but have found so-called frequentist to be easier to understand and  easier to implement. Additionally, I have found Fisher's approach to frequentist statistics appealing to my mathematical background.\n",
     "\n",
-    "From the technical side, I wanted to do something different decided to write the distribution for generating data in [Scala](https://www.scala-lang.org/) and use that distribution from Python. But why did I write my distribution in Scala? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the [JVM](https://en.wikipedia.org/wiki/Java_virtual_machine) from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for Scala code. I've used both PySpark and Spark in Scala and this gave me an opportunity to understand how PySpark works better.\n",
+    "From the computational perspective, I wanted to do something different decided to write the probability distribution for generating data in [Scala](https://www.scala-lang.org/) and then use it from Python. Why? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the [JVM](https://en.wikipedia.org/wiki/Java_virtual_machine) from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for Scala code. I've used both PySpark and Spark in Scala and this gave me an opportunity to understand how PySpark works better.\n",
     "\n",
     "Let's get into how I wrote the Poisson distribution in Scala and used it to sample data from in Python.\n",
     "\n",
-    "## 2. Sampling A Distribution Written In Scala Using Python With Py4J <a class=\"anchor\" id=\"second-bullet\"></a>\n",
+    "## 2. Sampling A Distribution Written In Scala Using Py4J <a class=\"anchor\" id=\"second-bullet\"></a>\n",
     "---------------\n",
     "\n",
-    "The first thing I need is data from a Poisson distribution to estimate the mean rate $\\lambda$ and for that purpose I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala). The Poisson distribution is a probability distribution for a random variable $y$ that represents some count phenomena, i.e. a number of non-zero integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour are governed by Poisson distribution. The disibution is,\n",
+    "I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala) so that I sample data from it to estimate the mean rate $\\lambda$ of that distribution. The Poisson distribution is a probability distribution for a random variable $y$ that represents some count phenomena, i.e. a number of non-zero integer occurences in some fixed timeframe.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour are governed by Poisson distribution. The disibution is,\n",
     "\n",
     "$$ p(y \\, = \\, k)  \\; = \\; \\frac{\\lambda^{k} e^{-\\lambda} }{k!} $$\n",
     "\n",
@@ -761,7 +761,7 @@
     " &= \\; E_{y} \\left[  - \\frac{d^{2}\\log \\left(L(\\alpha \\, | \\, \\textbf{y}) \\right)}{d\\alpha^{2}}  \\right] \n",
     "\\end{align}\n",
     "\n",
-    "One can show that the standard error for the maximum likelihood estimate $(\\widehat{\\alpha})$ will then be,\n",
+    "One can show that the standard error for the maximum likelihood estimate $(\\widehat{\\alpha}_{n})$ will then be,\n",
     "\n",
     "$$ \\text{S.E.}(\\widehat{\\alpha}_{n}) \\; = \\; \\frac{1}{\\sqrt{\\mathcal{I}_{n}}}$$\n",
     "\n",
@@ -772,7 +772,7 @@
     "Asymptotic normality for the MLE implies,\n",
     "\n",
     "\\begin{equation}\n",
-    " \\widehat{\\alpha} \\; \\sim \\; N(\\alpha, \\, \\mathcal{I}_{n}^{-1})\n",
+    " \\widehat{\\alpha}_{n} \\; \\sim \\; N(\\alpha, \\, \\mathcal{I}_{n}^{-1})\n",
     "\\end{equation}\n",
     "\n",
     "These facts can be used to calculate confidence intervals for the MLE,\n",
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
     "    z = 1.88/2\n",
     "    m = mle(sample)\n",
     "    n = len(sample)\n",
-    "    return (m - z*m/np.sqrt(n), m + z*m/np.sqrt(n))\n",
+    "    return (m - z*np.sqrt(m/n), m + z*np.sqrt(m/n))\n",
     "\n",
     "def in_ci(lam, sample):\n",
     "    interval = ci(sample)\n",
@@ -799,20 +799,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.013"
-      ]
-     },
-     "execution_count": 393,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mle(sample)"
    ]
@@ -900,7 +889,32 @@
    "metadata": {},
    "source": [
     "# Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
-    "-----------"
+    "-----------\n",
+    "\n",
+    "In the frequentist approach the parameter we wish to estimation $\\lambda$ assumed to from a distribution $f(y \\, \\vert \\, \\lambda)$.  Our observed data $\\textbf{y} \\, = \\, \\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ are assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and knowledge about the value of is $\\lambda$ is obtained by using the maximum likelyhood. Probability statements about $\\lambda$ don't make sense as its a fixed value and has not random component.  However, probability statements can be made about a confidence interval for $\\lambda$ which incorporate the uncertainity in the data.\n",
+    "\n",
+    "\n",
+    "In a Bayesian approach, $\\lambda$ is not a fixed value, but assumed to have values from a probability distribution called a [prior](https://en.wikipedia.org/wiki/Prior_probability), $P(\\lambda)$.  A sample is taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, \\textbf{y})$.\n",
+    "\n",
+    "\n",
+    "Let $f(\\lambda \\, \\vert \\, \\textbf{y})$ be the sampling distribution then,\n",
+    "\n",
+    "$$ P(\\lambda \\, \\vert \\, \\textbf{y})\n",
+    " \\; = \\; \n",
+    "\\frac{ P ( \\textbf{y} \\, \\vert \\, \\lambda) \\, P(\\lambda)}{m(\\textbf{y})}, \\quad \\text{where} \\qquad m(\\textbf{y}) \\; = \\; \\int P ( \\textbf{y} \\, \\vert \\, \\lambda) P(\\lambda) d\\lambda\n",
+    " $$\n",
+    " \n",
+    "\n",
+    "The [Bayesian estimator](https://en.wikipedia.org/wiki/Bayes_estimator) (often called the posterior mean) could then be taken the be the expected value over the the random variable $y$:\n",
+    " \n",
+    "$$ \\widehat{\\lambda} \\; = \\; E_{y}(\\lambda \\, \\vert \\, \\textbf{y})$$\n",
+    " \n",
+    "\n",
+    "This requires us to calculate the full posterior distribution which can be computationally intractable. Instead, one could use a Bayesian estimator that is called the [Maximum A-Posteriori (MAP)](https://en.wikipedia.org/wiki/Maximum_a_posteriori_estimation):\n",
+    " \n",
+    "  $$ \\widehat{\\lambda} \\; = \\; \\max_{\\lambda} P(\\lambda \\, \\vert \\, \\textbf{y)}$$\n",
+    "  \n",
+    "We should note that Bayesian estimators are ALWAYS biased due to their choice of prior, however, they can reduce the variance in our estimators."
    ]
   },
   {
