--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bayesian Vs. Frequentist Estimation With Py4J and PyMC3\n",
+    "# Frequentist & Bayesian Statistics With Py4J and PyMC3\n",
     "-----\n",
     "\n",
     "__[1. Introduction](#first-bullet)__\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "py4j.java_gateway.JavaObject"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,33 +148,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Poisson',\n",
-       " 'apply',\n",
-       " 'canEqual',\n",
-       " 'copy',\n",
-       " 'equals',\n",
-       " 'getClass',\n",
-       " 'hashCode',\n",
-       " 'notify',\n",
-       " 'notifyAll',\n",
-       " 'productArity',\n",
-       " 'productElement',\n",
-       " 'productIterator',\n",
-       " 'productPrefix',\n",
-       " 'toString',\n",
-       " 'unapply',\n",
-       " 'wait']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "Py4JNetworkError",
+     "evalue": "An error occurred while trying to connect to the Java server (127.0.0.1:25333)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m_get_connection\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    981\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 982\u001b[0;31m             \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeque\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    983\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop from an empty deque",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mConnectionRefusedError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1119\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1120\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1121\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstream\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakefile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mConnectionRefusedError\u001b[0m: [Errno 61] Connection refused",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mPy4JNetworkError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c34278258d65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__dir__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1383\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1384\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1385\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_populate_fields\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1386\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_methods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_field_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1387\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m_populate_fields\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1406\u001b[0m                 \u001b[0mproto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEND_COMMAND_PART\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1407\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1408\u001b[0;31m             \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1409\u001b[0m             return_value = get_return_value(\n\u001b[1;32m   1410\u001b[0m                 answer, self._gateway_client, self._target_id, \"__dir__\")\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36msend_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1034\u001b[0m          \u001b[0;32mif\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mbinary\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0;32mis\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1035\u001b[0m         \"\"\"\n\u001b[0;32m-> 1036\u001b[0;31m         \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_connection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1037\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1038\u001b[0m             \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m_get_connection\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    982\u001b[0m             \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeque\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    983\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 984\u001b[0;31m             \u001b[0mconnection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_create_connection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    985\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    986\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m_create_connection\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    988\u001b[0m         connection = GatewayConnection(\n\u001b[1;32m    989\u001b[0m             self.gateway_parameters, self.gateway_property)\n\u001b[0;32m--> 990\u001b[0;31m         \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    991\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    992\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1130\u001b[0m                 \u001b[0;34m\"server ({0}:{1})\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1131\u001b[0m             \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1132\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mPy4JNetworkError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1133\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1134\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_authenticate_connection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mPy4JNetworkError\u001b[0m: An error occurred while trying to connect to the Java server (127.0.0.1:25333)"
+     ]
     }
    ],
    "source": [
@@ -494,7 +494,7 @@
     "        var_name=[\"lambda\"]\n",
     ")\n",
     "\n",
-    "sns.displot(df, x=\"value\", hue=\"lambda\", kind=\"kde\", height=5)"
+    "sns.displot(df, x=\"value\", hue=\"lambda\", height=5)"
    ]
   },
   {
@@ -590,7 +590,7 @@
     "2. It is invariant, if $\\widehat{\\lambda}$ is the MLE of $\\lambda$, then for any function $\\tau(\\lambda)$, the MLE of $\\tau(\\lambda)$ is $\\tau(\\widehat{\\lambda})$.\n",
     "3. The MLE is an asymptotically normal estimator.  That is $\\widehat{\\lambda} \\; \\sim \\; N(\\lambda, \\, \\mathcal{I}^{-1/2})$. \n",
     "\n",
-    "TTo explain the first property we, must note that as an estimator is a function of the sample space it is also a random variable.  Let $X_1, \\, \\ldots, \\, X_n$ be a sequence of random variables then $X_{i} \\; \\xrightarrow{\\mathcal{P}} \\; X$ if,\n",
+    "To explain the first property we, must note that as an estimator is a function of the sample space it is also a random variable.  Let $X_1, \\, \\ldots, \\, X_n$ be a sequence of random variables then $X_{i} \\; \\xrightarrow{\\mathcal{P}} \\; X$ if,\n",
     "\n",
     "$$\\forall \\epsilon > 0, \\; \\lim\\limits_{n \\rightarrow \\infty} P(\\vert X_i - X \\vert > \\epsilon ) \\; = \\; 0$$ \n",
     "\n",
@@ -660,7 +660,7 @@
     "Now, since the maximum likelihood estimator is the mean we know it satifies the [Central Limit Theorem](https://en.wikipedia.org/wiki/Central_limit_theorem),\n",
     "\n",
     "\n",
-    "$$ \\bar{y}_{n} \\; \\xrightarrow{\\mathcal{D}} \\; N(\\lambda,\\lambda/n) $$\n",
+    "$$ \\hat{\\lambda} _{n}\\, = \\, \\bar{y}_{n} \\; \\xrightarrow{\\mathcal{D}} \\; N(\\lambda,\\lambda/n) $$\n",
     "\n",
     "Hence we can repeatedly sample `p1` and compute the distribution of the MLE for various values of sample size $n$ to show how the MLE converges in distribution."
    ]
@@ -891,30 +891,29 @@
     "# Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
     "-----------\n",
     "\n",
-    "In the frequentist approach the parameter we wish to estimation $\\lambda$ assumed to from a distribution $f(y \\, \\vert \\, \\lambda)$.  Our observed data $\\textbf{y} \\, = \\, \\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ are assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and knowledge about the value of is $\\lambda$ is obtained by using the maximum likelyhood. Probability statements about $\\lambda$ don't make sense as its a fixed value and has not random component.  However, probability statements can be made about a confidence interval for $\\lambda$ which incorporate the uncertainity in the data.\n",
+    "In the frequentist approach the parameter we wish to estimation $\\lambda$ assumed to from a distribution $f(y \\, \\vert \\, \\lambda)$.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ are assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and knowledge about the value of is $\\lambda$ is obtained by using the maximum likelyhood. Probability statements about the unknown rate constant $\\lambda$ don't make sense as its a fixed value and not random variable.  However, probability statements can be made about a confidence interval for $\\lambda$.  Confidence intervals provides a way to quantify the uncertaintity in our estimator which was calculated from the data.\n",
     "\n",
+    "In contrast, in Bayesian statistics, $\\lambda$ is not a fixed value, but assumed to have values coming from a probability distribution called the [prior](https://en.wikipedia.org/wiki/Prior_probability), $P(\\lambda)$. The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is a sample taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n )$. We can formulate estimators for $\\lambda$ and quanitify the uncertaintity in those esimates by directly using the posterior distribution. We'll go over two of these esimators.\n",
     "\n",
-    "In a Bayesian approach, $\\lambda$ is not a fixed value, but assumed to have values from a probability distribution called a [prior](https://en.wikipedia.org/wiki/Prior_probability), $P(\\lambda)$.  A sample is taken from a population and used to update the prior distribution, now called the [posterior distribution](https://en.wikipedia.org/wiki/Posterior_distribution), $P(\\lambda \\, \\vert \\, \\textbf{y})$.\n",
+    "Let $f(y_1, y_2, \\ldots, y_n \\, \\vert \\, \\lambda )$ be the sampling distribution then the posterior distribution then [Baye's theorem](https://en.wikipedia.org/wiki/Bayes%27_theorem) states,\n",
     "\n",
-    "\n",
-    "Let $f(\\lambda \\, \\vert \\, \\textbf{y})$ be the sampling distribution then,\n",
-    "\n",
-    "$$ P(\\lambda \\, \\vert \\, \\textbf{y})\n",
+    "$$ P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)\n",
     " \\; = \\; \n",
-    "\\frac{ P ( \\textbf{y} \\, \\vert \\, \\lambda) \\, P(\\lambda)}{m(\\textbf{y})}, \\quad \\text{where} \\qquad m(\\textbf{y}) \\; = \\; \\int P ( \\textbf{y} \\, \\vert \\, \\lambda) P(\\lambda) d\\lambda\n",
-    " $$\n",
+    "\\frac{ P ( y_1, y_2, \\ldots, y_n \\, \\vert \\, \\lambda) \\, P(\\lambda)}{m(y_1, y_2, \\ldots, y_n)}, \\quad \\text{and} \\qquad m(y_1, y_2, \\ldots, y_n) \\; = \\; \\int P ( y_1, y_2, \\ldots, y_n\\, \\vert \\, \\lambda) \\, P(\\lambda) \\, d\\lambda\n",
+    "$$\n",
     " \n",
+    "\n",
+    "Where $m(y_1, y_2, \\ldots, y_n)$ is called the marginal distribution and used for normalization. Note that while the random variable $y \\, \\in \\, \\mathbb{N} \\, \\cup \\, \\{0\\}$ is an integer, the rate $\\lambda \\, \\in \\, \\mathbb{R}_{+}$ is non-zero real number.\n",
+    "\n",
     "\n",
     "The [Bayesian estimator](https://en.wikipedia.org/wiki/Bayes_estimator) (often called the posterior mean) could then be taken the be the expected value over the the random variable $y$:\n",
     " \n",
-    "$$ \\widehat{\\lambda} \\; = \\; E_{y}(\\lambda \\, \\vert \\, \\textbf{y})$$\n",
+    "$$ \\widehat{\\lambda} \\; = \\; E_{y}(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)$$\n",
     " \n",
     "\n",
-    "This requires us to calculate the full posterior distribution which can be computationally intractable. Instead, one could use a Bayesian estimator that is called the [Maximum A-Posteriori (MAP)](https://en.wikipedia.org/wiki/Maximum_a_posteriori_estimation):\n",
-    " \n",
-    "  $$ \\widehat{\\lambda} \\; = \\; \\max_{\\lambda} P(\\lambda \\, \\vert \\, \\textbf{y)}$$\n",
-    "  \n",
-    "We should note that Bayesian estimators are ALWAYS biased due to their choice of prior, however, they can reduce the variance in our estimators."
+    "The Bayesian estimator requires us to calculate the full posterior distribution which can be computationally expenisve. Due to this computational expense, until the advant of computers, statisticians stuck to using [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) in Bayesian methods sicne there are analytic solutions for the posterior distribution.\n",
+    "\n",
+    "Despite the expense, having the full posterior distribution allows us to easily quantify the uncertaintity in our estimator. The anology of confidence in Bayesian esimation is called the [Credible Region](https://en.wikipedia.org/wiki/Credible_interval).\n"
    ]
   },
   {
@@ -1345,7 +1344,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusions <a class=\"anchor\" id=\"sixth-bullet\"></a>"
+    "# Connecting The Two Methods & Conclusions <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
+    "\n",
+    "Instead, one could use a Bayesian estimator that is called the [Maximum A-Posteriori (MAP)](https://en.wikipedia.org/wiki/Maximum_a_posteriori_estimation):\n",
+    " \n",
+    "  $$ \\widehat{\\lambda} \\; = \\; \\max_{\\lambda} P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)$$\n",
+    "  \n",
+    "We should note that Bayesian estimators are ALWAYS biased due to their choice of prior, however, they can reduce the variance in our estimators."
    ]
   },
   {
