forgot to add changes to notebook

--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -885,7 +885,7 @@
     "\n",
     "The confidence interval is a function of the sample space and therefore a random variable. One can make probability statements about the confidence intervals. Indeed the correct interpretation is that if you are able to repeatedly re-sample the population distribution $f(y \\, \\vert \\, \\lambda)$ to form many confidence intervals $\\text{CI}_{94}$, 94% of them would contain the true population parameter $\\lambda$.\n",
     "\n",
-    "We can test this by creating a function which returns a boolean indicating whether or not the pamater (`lam`"
+    "We can test this by creating a function which returns a boolean indicating whether or not the parameter `lam` is contained in the 94% confidence interval from the data `sample`:"
    ]
   },
   {
@@ -927,6 +927,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_ci(3, sample)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -955,6 +975,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is nearly spot on to what the theory says!\n",
+    "\n",
     "Let's now move on to Bayesian methods!\n",
     "\n",
     "# Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
@@ -979,7 +1001,7 @@
     "$$ \\widehat{\\lambda} \\; = \\; E_{y}(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)$$\n",
     " \n",
     "\n",
-    "The Bayesian estimator requires us to calculate the full posterior distribution which can be computationally expenisve. Due to this computational expense, until the advant of computers, statisticians stuck to using [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) in Bayesian methods sicne there are analytic solutions for the posterior distribution.\n",
+    "The Bayesian estimator requires us to calculate the full posterior distribution which can be computationally expenisve. Due to this computational expense, until the advant of computers, statisticians stuck to using [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) in Bayesian methods since there are analytic solutions for the posterior distribution.\n",
     "\n",
     "Despite the expense, having the full posterior distribution allows us to easily quantify the uncertaintity in our estimator. The anology of confidence in Bayesian esimation is called the [Credible Region](https://en.wikipedia.org/wiki/Credible_interval).\n"
    ]
