adding analytical bayes examplae

--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -1001,14 +1001,32 @@
     "$$ \\widehat{\\lambda} \\; = \\; E_{y}(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)$$\n",
     " \n",
     "\n",
-    "The Bayesian estimator requires us to calculate the full posterior distribution which can be computationally expenisve. Due to this computational expense, until the advant of computers, statisticians stuck to using [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) in Bayesian methods since there are analytic solutions for the posterior distribution.\n",
+    "Until the advant of computers, statisticians stuck to using [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) in Bayesian methods since there are analytic solutions for the posterior distribution.\n",
     "\n",
-    "Despite the expense, having the full posterior distribution allows us to easily quantify the uncertaintity in our estimator. The anology of confidence in Bayesian esimation is called the [Credible Region](https://en.wikipedia.org/wiki/Credible_interval).\n"
+    "If we were to assume our prior was [Gamma distributed](https://en.wikipedia.org/wiki/Gamma_distribution) for $\\alpha, \\beta > 0$:\n",
+    "\n",
+    "$$\n",
+    "P(\\lambda \\, \\vert \\, \\alpha, \\beta )  \\; = \\;   \\frac{\\beta^{\\alpha }}{(\\alpha-1)! }  \\, x^{\\alpha-1} \\, e^{-\\beta y}\n",
+    "$$\n",
+    "\n",
+    "Then the posterior is a [Negative Binomial distribution](https://en.wikipedia.org/wiki/Negative_binomial_distribution) $NB \\left(\\alpha \\, + \\, n \\, \\bar{y}_{n}, \\, 1 \\, / \\, (1 \\, + \\, \\beta \\, + \\, n) \\, \\right)$. This has posterior mean:\n",
+    "\n",
+    "$$\\hat{\\lambda} \\; = \\; \\frac{\\alpha}{\\beta \\, + \\, n} \n",
+    "\\, + \\, \\frac{ \\bar{y}_{n}}{1 \\, + \\, \\beta \\, / \\, n\\, }$$\n",
+    "\n",
+    "We can see that with little data (small $n$) our estimate we are closer to the prior mean ($\\frac{\\alpha}{\\beta}$) while with lots of data (large $n$) we move towards the average $\\bar{y}_{n}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Bayesian estimator requires us to calculate the full posterior distribution without an conjugate prior requires numerical approximation to the posterior which computationally expenisve. Despite the added complexity, having the full posterior distribution allows us to easily quantify the uncertaintity in our estimator. The anology of confidence in Bayesian esimation is called the [Credible Interval](https://en.wikipedia.org/wiki/Credible_interval)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,6 +1164,14 @@
    ],
    "source": [
     "az.plot_posterior(trace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before performing the output analysis we must: (1) ensure the Markov chains have reached stationarity and (2)\n",
+    "only use those samples that have been generated after stationarity has been reached."
    ]
   },
   {
@@ -1441,7 +1467,10 @@
     " \n",
     "  $$ \\widehat{\\lambda} \\; = \\; \\max_{\\lambda} P(\\lambda \\, \\vert \\, y_1, y_2, \\ldots, y_n)$$\n",
     "  \n",
-    "We should note that Bayesian estimators are ALWAYS biased due to their choice of prior, however, they can reduce the variance in our estimators."
+    "We should note that Bayesian estimators are ALWAYS biased due to their choice of prior, however, they can reduce the variance in our estimators.\n",
+    "\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem"
    ]
   },
   {
