--- a/notebooks/BayesMLE1.ipynb
+++ b/notebooks/BayesMLE1.ipynb
@@ -20,7 +20,7 @@
     "__[6. Connecting The Two Methods](#sixth-bullet)__\n",
     "\n",
     "\n",
-    "## Introduction <a class=\"anchor\" id=\"first-bullet\"></a>\n",
+    "## 1. Introduction <a class=\"anchor\" id=\"first-bullet\"></a>\n",
     "-------------\n",
     "\n",
     "In this post I want to go back to the basics of statistics, but with an advanced spin on things. By \"advanced spin\" I mean, both from in terms of mathematics and computational techniques. The topic I'll dive into is:\n",
@@ -755,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Confidence Intervals From Fisher Information <a class=\"anchor\" id=\"fourth-bullet\"></a>\n",
+    "## 4. Confidence Intervals From Fisher Information <a class=\"anchor\" id=\"fourth-bullet\"></a>\n",
     "-------------------\n",
     "Given a distribution $y_{i} \\, \\sim \\, f(y \\, \\vert \\, \\alpha)$ for $i \\, = \\, 1, \\ldots , n$ and the likelyhood function,\n",
     "\n",
@@ -992,7 +992,7 @@
    "source": [
     "This is nearly spot on to what the theory says!  Let's now move on to Bayesian methods!\n",
     "\n",
-    "# Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
+    "## 5. Bayesian Esimatators & Credible Intervals With PyMC3 <a class=\"anchor\" id=\"fifth-bullet\"></a>\n",
     "-----------\n",
     "\n",
     "In the frequentist approach the parameter we wish to estimation $\\lambda$ is fixed, but unknown.  The observed data $\\left\\{ y_1, y_2, \\ldots, y_n \\right\\}$ is assumed to be from a population $f(y \\, \\vert \\, \\lambda)$ and estimates about the value of the population paremeter $\\lambda$ is obtained by using the maximum likelyhood. As we discussed above, probability statements about the unknown rate constant $\\lambda$ don't make sense as its a fixed value and not random variable.  However, probability statements can be made about a confidence interval for $\\lambda$. In the maximum likelyhood method, asympotic normality allows us to use confidence intervals as a way to quantify the uncertaintity in our estimator which was calculated from the data.\n",
@@ -1809,7 +1809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Connecting The Two Methods <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
+    "## 6. Connecting The Two Methods <a class=\"anchor\" id=\"sixth-bullet\"></a>\n",
     "------\n",
     "\n",
     "Another way to rewrite Baye's formula is in terms of the Likelyhood functions, $L(\\lambda \\, \\vert \\,  y_1, y_2, \\ldots, y_n)$\n",
